--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.test.mule</groupId>
-	<artifactId>desafio_sicredi</artifactId>
+	<artifactId>desafio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 
 
 
 	<dependencies>
+
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -35,8 +36,6 @@
 			<version>5.3.0</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
 
 
 	</dependencies>
